second banner section

--- a/index.html
+++ b/index.html
@@ -5,32 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penguin shoes</title>
+    <!-- font awesome link -->
+    <script src="https://kit.fontawesome.com/efe6546d1e.js" crossorigin="anonymous"></script>
     <!-- Bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <header class="">
-      <!-- header section  -->
-        <section class="bg-c">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <img class="md-w-50 lg-w-25 sm-w-25 w-25 ps-4" src="icons/Logo.png" alt="">
+    <header class=" bg-seco">
+      <!-- Nav section start -->
+        <section>
+          <nav class="navbar navbar-expand-lg navbar-light bg-seco">
+            <div class="container-fluid ps-5">
+                <img class="w-25" src="icons/Logo.png" alt="">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="d-flex pe-5 ">
-                <div class="collapse navbar-collapse ms-5" id="navbarTogglerDemo02">
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <div class="ms-5">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active ps-3" aria-current="page" href="#">Home</a>
+                      <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link ps-3 " href="#">Product</a>
+                      <a class="nav-link" href="#">Product</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link ps-3 " href="#">About us</a>
+                      <a class="nav-link " href="#">About us</a>
                     <li class="nav-item">
-                      <a class="nav-link ps-3 " href="#">Contact us</a>
+                      <a class="nav-link " href="#">Contact us</a>
                     </li>
                   </ul>
                 </div>
@@ -38,7 +40,29 @@
             </div>
           </nav>
         </section>
-        <!-- header section end  -->
+        <!-- Nav section end  -->
+        <!-- banner section start  -->
+        <section>
+          <div class="container mt-auto">
+            <div class="row">
+              <div class="col-12 col-md-6 ">
+                <div>
+                  <img class="w-75 pb-3" src="images/Group 33092.png" alt="">
+                </div>
+              </div>
+                <div class="col-12 col-md-6 mt-5">
+                  <div>
+                    <h1><span class="bg-orengi">Nike React </span><br>
+                      Infinity Run 2</h1>
+                      <p>Lorem Ipsum is simply dummy text of the printing 
+                        and typesetting industry.</p>
+                        <button type="button" class="btn btn-primary"><i class="fa-solid fa-cart-plus pe-2"></i>BUY NOW</button>
+                  </div>
+                </div>
+            </div>
+          </div>
+        </section>
+        <!-- banner section end  -->
     </header>
     <!-- js link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
