--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         <!-- Nav section end  -->
         <!-- banner section start  -->
         <section>
-          <div class="container mt-auto">
+          <div class="container mt-auto ">
             <div class="row">
-              <div class="col-12 col-md-6 ">
+              <div class="col-12 col-md-6 flex-md-column-reverse">
                 <div>
                   <img class="w-75 pb-3" src="images/Group 33092.png" alt="">
                 </div>
               </div>
-                <div class="col-12 col-md-6 mt-5">
+                <div class="col-12 col-md-6 mt-5 flex-md-column-reverse">
                   <div>
                     <h1><span class="bg-orengi">Nike React </span><br>
                       Infinity Run 2</h1>
@@ -64,6 +64,54 @@
         </section>
         <!-- banner section end  -->
     </header>
+    <main>
+      <!-- casual shoes start -->
+      <section class="container">
+        <h1 class="m-5">CASUAL SHOES</h1>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card h-100 shadow-lg">
+              <img src="images/Daco_1703273 1.png" class="card-img-top img-fluid w-75 ms-5" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Sneakers Skate Shoe </h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="d-flex justify-content-between m-3">
+                <h1 class="bg-orenge">$234</h1>
+                <button type="button" class="btn btn-primary"><i class="fa-solid fa-cart-plus pe-2"></i>BUY NOW</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 shadow-lg">
+              <img src="images/image 5.png" class="card-img-top img-fluid w-75 ms-5" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Nike Shoes </h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="d-flex justify-content-between m-3">
+                <h1 class="bg-orenge">$234</h1>
+                <button type="button" class="btn btn-primary"><i class="fa-solid fa-cart-plus pe-2"></i>BUY NOW</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 shadow-lg">
+              <img src="images/pngegg 1.png" class="card-img-top img-fluid w-75 ms-5" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Sneakers Basketball shoe</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="d-flex justify-content-between m-3">
+                <h1 class="bg-orenge">$234</h1>
+                <button type="button" class="btn btn-primary"><i class="fa-solid fa-cart-plus pe-2"></i>BUY NOW</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- casual shoes start -->
+    </main>
     <!-- js link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- css link  -->
