--- a/index.html
+++ b/index.html
@@ -110,7 +110,53 @@
           </div>
         </div>
       </section>
-      <!-- casual shoes start -->
+      <!-- casual shoes end -->
+      <!-- Formal shoes start -->
+      <section class="container">
+        <h1 class="m-5">FORMAL SHOES</h1>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card h-100 shadow-lg">
+              <img src="images/Mask Group.png" class="card-img-top img-fluid w-75 ms-5" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Prestige High-Cut Leather </h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="d-flex justify-content-between m-3">
+                <h1 class="bg-orenge">$234</h1>
+                <button type="button" class="btn btn-primary"><i class="fa-solid fa-cart-plus pe-2"></i>BUY NOW</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 shadow-lg">
+              <img src="images/Rectangle 38.png" class="card-img-top img-fluid w-75 ms-5" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Slip-On Formal Shoe</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="d-flex justify-content-between m-3">
+                <h1 class="bg-orenge">$234</h1>
+                <button type="button" class="btn btn-primary"><i class="fa-solid fa-cart-plus pe-2"></i>BUY NOW</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card h-100 shadow-lg">
+              <img src="images/Rectangle 39.png" class="card-img-top img-fluid w-75 ms-5" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Slip-On Formal Shoe</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="d-flex justify-content-between m-3">
+                <h1 class="bg-orenge">$234</h1>
+                <button type="button" class="btn btn-primary"><i class="fa-solid fa-cart-plus pe-2"></i>BUY NOW</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Formal shoes end -->
     </main>
     <!-- js link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
